# xlamb

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml
examples/: CMakeLists.txt
examples/basic_flu/: CMakeLists.txt  model.hpp
examples/basic_flu_w_vax/: CMakeLists.txt  model.hpp
examples/sandbox/: CMakeLists.txt  main.cpp  model.hpp
include/xlamb/: architect.hpp  builder.hpp  context.hpp  entity.hpp  log.hpp  logger.hpp  rng_handler.hpp  simulator.hpp  utility.hpp  view.hpp  xlamb.hpp
src/: CMakeLists.txt  architect.cpp  builder.cpp  context.cpp  entity.cpp  log.cpp  logger.cpp  rng_handler.cpp  simulator.cpp  utility.cpp
test/: CMakeLists.txt  test-context.cpp  test-context_any_map.cpp  test-context_rng.cpp  test-context_views.cpp
